# razer-laptop-control

./: Cargo.toml  README.md  install.sh
data/devices/: laptops.json
data/gui/: com.no8f.razerLaptopControl.desktop
data/udev/: 99-hidraw-permissions.rules
razer_control_gui/data/udev/: 99-hidraw-permissions.rules
razer_control_gui/src/razer-settings/: error_handling.rs  razer-settings.rs  widgets.rs
src/razer-settings/: razer-settings.rs
