[package]
name = "razerLaptopControl"
version = "0.2.0"
authors = ["Noah Felber <fel.no@proton.me>", "Dimitar Atanasov <datanasov@cpdbg.com>", "Josu Goñi"]
edition = "2024"

[[bin]]
name = "razer-cli"
path = "razer_control_gui/src/cli/cli.rs"

[[bin]]
name = "daemon"
path = "razer_control_gui/src/daemon/daemon.rs"

[[bin]]
name = "razer-settings"
path = "razer_control_gui/src/razer-settings/razer-settings.rs"

[lints.rust]

[lints.clippy]
get_first = "allow"

[dependencies]
dbus = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.17"
rand = "0.8.5"
lazy_static = "1.4.0"
bincode = "1.3.3"
systemstat = "0.2.3"
hidapi = { version = "2.4.1", default-features = false, features = ["linux-native"] }
serde-big-array = "0.5.1"
clap = { version = "4.4.13", features = ["derive"] }
gtk = { version = "0.10", package = "gtk4", features = ["gnome_48"] }
glib = "0.21.1"
log = "0.4.22"
env_logger = "0.11.5"

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_6"]
